  * debian/patches/hurd-i386/local-fix-nss.diff: Rebased.
  * debian/patches/hurd-i386/{tg-single-select-timeout.diff,tg-setitimer.diff,
    tg-remap_getcwd.diff,tg-io_select_timeout.diff,tg-poll_errors_fixes.diff,
    submitted-anon-mmap-shared.diff,tg-ONSTACK.diff}: Rename to git-foo,
    commited upstream for 2.31.
  * debian/testsuite-xfail-debian.mk: Update with new failing tests.

 -- Adam Conrad <adconrad@0c3.net>  Thu, 29 Aug 2019 01:58:14 -0600

glibc (2.29-0experimental1) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/hurd-i386/submitted-net.diff: rebase.
  * debian/patches/hurd-i386/local-fix-nss.diff: rebase.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix math tests on hppa.
  * debian/testsuite-xfail-debian.mk: XFAIL two new tests on HPPA that are
    due to a bug in the testsuite, reported upstream.
  * debian/sysdeps/sparc64.mk: disable PIE on sparc64 as it produces broken
    binaries, causing issues in the testsuite.
  * debian/sysdeps/alpha.mk, debian/control.in/main: build with gcc-8 on alpha
    as gcc-9 introduces math errors in the testsuite.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 21 Aug 2019 11:13:51 +0200

glibc (2.29-0experimental0) experimental; urgency=medium

  [ Adam Conrad ]
  * New upstream release 2.29, with git updates up to 2019-02-20:
    - Add PF_XDP, AF_XDP and SOL_XDP to bits/socket.h.  Closes: #933800.
    - debian/symbols.wildcard: Add 2.29, and debian/control: Regenrate.
    - debian/patches/localedata/locales_CH.diff: Applied upstream.
    - debian/patches/localedata/submitted-it_IT-thousands_sep.diff: Upstreamed.
    - debian/patches/localedata/git-en_US-date_fmt.diff: Applied upstream.
    - debian/patches/hurd-i386/git-magic-pid.diff: Applied upstream.
    - debian/patches/hurd-i386/git-interrupt_timeout_EIO.diff: Upstreamed.
    - debian/patches/hurd-i386/git-interrupt_timeout.diff: Applied upstream.