@@ -33,6 +33,7 @@ arm/local-arm-futex.diff
 
 hppa/local-inlining.diff
 
+hurd-i386/git-ONSTACK.diff
 hurd-i386/local-enable-ldconfig.diff
 hurd-i386/tg-context_functions.diff
 hurd-i386/tg-sysvshm.diff
@@ -71,7 +72,6 @@ hurd-i386/tg-bootstrap.diff
 hurd-i386/local-mach_print.diff
 hurd-i386/git-anon-mmap-shared.diff
 hurd-i386/tg-eintr.diff
-hurd-i386/git-ONSTACK.diff
 hurd-i386/tg-libc_rwlock_recursive.diff
 hurd-i386/local-no_unsupported_ioctls.diff
 hurd-i386/local-exec_filename.diff
