@@ -25,6 +25,10 @@ glibc (2.30-0experimental0) UNRELEASED; urgency=medium
     submitted-anon-mmap-shared.diff,tg-ONSTACK.diff}: Rename to git-foo,
     commited upstream for 2.31.
   * debian/testsuite-xfail-debian.mk: Update with new failing tests.
+  * debian/patches/hurd-i386/git-ONSTACK.diff: Move earlier in the queue,
+    since was applied upstream.
+  * debian/patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rebase
+    accordingly.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 29 Aug 2019 01:58:14 -0600
 
